2008-03-04 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCptropt.c (ptrPseudoSymConvert): fixed bug 1536762
	* support/regression/tests/bug1536762.c: new, added
	* src/SDCCutil.c,
	* src/SDCCutil.h: added getBuildDate()
	* src/SDCCmain.c (printVersionInfo),
	* src/SDCCglue.c (initialComments): use getBuildDate() instead of __DATE__

2008-03-04 Raphael Neider <rneider AT web.de>

	* src/pic/gen.c: removed unused prototypes, prevent internal errors
	  on accessing OP_SYM_TYPE(op)
	* src/pic/gen.h: removed unused protorype of genMinusDec()
	* src/pic/genarith.c (genMinus): cosmetic changes, rewritten to
	  fix #1876953 (invalid subtraction code), removed unused code

2008-03-03 Raphael Neider <rneider AT web.de>

	* src/pic/gen.c,
	* src/pic/gen.h,
	* src/pic/genarith.c,
	* src/pic/ralloc.c,
	* src/pic/ralloc.h: removed AOP_R0, AOP_R1, AOP_DPTR, AOP_DPTR2,
	  AOP_ACC, and *_IDX and adjusted code, removed unused legacy code

2008-03-03 Raphael Neider <rneider AT web.de>

	* src/pic/device.c (find_device): search user-specified paths first
	  for pic14devices.txt, fixes #1900827

2008-03-02 Borut Razem <borut.razem AT siol.net>

	* support/scripts/sdcc.nsi: fixed bug in IsNT, LogicLib-isation of
	  AddToPath and RemoveFromPath

2008-03-01 Borut Razem <borut.razem AT siol.net>

	* support/scripts/sdcc.nsi: reverted MULTIUSER page since it didn't
	  work correctly, added debugging support if -DSDCC.DEBUG command line
	  option is defined

2008-02-28 Borut Razem <borut.razem AT siol.net>

	* doc/sdccman.lyx: cosmetic changes

2008-02-28 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/ralloc.c (fillGaps): fixed bug 1839671
	* doc/sdccman.lyx: fixed unmeant removal of spaces

2008-02-27 Borut Razem <borut.razem AT siol.net>

	* support/scripts/sdcc.nsi: corrected installation directory for
	  current user installation mode
	* doc/README.txt: added Philipp Klaus Krause to the developers list

2008-02-27 Maarten Brock <sourceforge.brock AT dse.nl>
